# racial-bias-in-ed-prediction

./: .gitignore  00_data_exploration.ipynb  02_class_imbalance.ipynb  03_baseline_metrics_race.ipynb  04_hyperparameter_tuning.ipynb  05_multiple_rerun_generation.ipynb  06_effect_size_calc.ipynb  A1_confounding_variables_analysis.ipynb  A2_extra_statistical_analysis.r  README.md  assessing_equity.ipynb  pyproject.toml  requirements.txt  xcrun_db
helper_functions/: MLP.py  __init__.py  nn.py  nn_training.py  notebook_utils.py  plotting.py  testing.py
